# llm-recipe-recommender

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  database.py  docker-compose.integration.yml  docker-compose.yml  pyproject.toml
notebooks/: csv_to_db.ipynb  ingredients_classifier.ipynb  llm_utils.py  mappings.py  query_testing.ipynb  vector_embedding.ipynb
recipes_repository/: recipes_repository.py
recipes_repository/SQL/: ddl.sql  select_relevant_cols_recipes.sql
recommender_engine/: __init__.py  llm_output_models.py  llm_utils.py  prompts.py  recommender_engine.py
tests/: conftest.py  fakes.py  test_llm_utils.py  test_recipes_repository.py  test_recommender_engine.py
tests/integration/: conftest.py  test_engine_integration.py  test_mysql_repository_integration.py  test_qdrant_integration.py
tests/unit/: conftest.py  test_app.py  test_recommender_engine.py
