[project]
name = "llm-recipe-recommender"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pandas (==2.3.3)",
    "numpy (==1.26.4)",
    "faiss-cpu (==1.9.0)",
    "sentence-transformers (>=5.2.1,<6.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "qdrant-client (>=1.12.0,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "ipykernel>=7.2.0",
    "dotenv",
    "openai",
    "plotly",
    "nbformat>=4.2.0",
    "litellm",
    "unidecode",
    "gradio (>=5.0.0,<6.0.0)",
]
